prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: htpasswd
    nginx.ingress.kubernetes.io/auth-realm: "Enter your credentials"
spec:
  defaultBackend:
    service:
      name: prometheus-service
      port:
        number: 80
  rules:
    - host: "prometheus.example.com"
      http:
        paths:
          - pathType: Prefix
            path: /metrics
            backend:
              service:
                name: node-exporter-service
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-service
                port:
                  number: 80

  ingressClassName: nginx
